# warpfs

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  aws-oss-mappings.md
.coding-hermes/: tasks.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml
.gitreins/: config.yaml  tasks.yaml
docs/: architecture.md  cli-reference.md  getting-started.md  graph-engine.md  index.md  mcp-tools.md
specs/: aws-services-priority-matrix.md  warpfs-spec.md
warpfs-backends/: Cargo.toml
warpfs-backends/src/: git.rs  lib.rs  local.rs  s3.rs
warpfs-cli/: Cargo.toml
warpfs-cli/src/: main.rs
warpfs-cli/src/commands/: backend.rs  classify.rs  graph.rs  init.rs  meta.rs  mod.rs  mount.rs  serve.rs  workspace.rs
warpfs-cli/tests/: cli.rs
warpfs-core/: Cargo.toml
warpfs-core/src/: config.rs  lib.rs  manifest.rs  sandbox.rs  virtual_dir.rs  workspace.rs  worktree.rs
warpfs-core/tests/: manifest_test.rs
warpfs-fuse/: Cargo.toml
warpfs-fuse/benches/: fuse_bench.rs
warpfs-fuse/src/: daemon.rs  lib.rs  ops.rs  permissions.rs  triggers.rs  workspace_mount.rs
warpfs-fuse/tests/: fuse_test.rs
warpfs-graph/: Cargo.toml
warpfs-graph/benches/: graph_bench.rs
warpfs-graph/src/: classify.rs  duckdb.rs  edges.rs  error.rs  graph.rs  impact.rs  lib.rs  parser.rs  rules.rs
warpfs-graph/tests/: edges_test.rs  graph_test.rs  impact_test.rs  parser_test.rs
warpfs-mcp/: Cargo.toml
warpfs-mcp/src/: server.rs
warpfs-mcp/src/tools/: mod.rs
warpfs-mcp/tests/: mcp_test.rs
warpfs-metadata/: Cargo.toml
warpfs-metadata/src/: inventory.rs  lib.rs  xattr.rs
warpfs-metadata/tests/: inventory_test.rs  xattr_test.rs
warpfs-permissions/: Cargo.toml
warpfs-permissions/src/: lib.rs
warpfs-plugins/: Cargo.toml
warpfs-plugins/src/: host_functions.rs  lib.rs  registry.rs  runtime.rs
warpfs-plugins/tests/: plugin_test.rs
warpfs-triggers/: Cargo.toml
warpfs-triggers/src/: debounce.rs  engine.rs  lib.rs
warpfs-triggers/tests/: trigger_test.rs
