[workspace]
members = ["warpfs-core", "warpfs-metadata", "warpfs-graph", "warpfs-cli", "warpfs-mcp", "warpfs-backends", "warpfs-triggers", "warpfs-fuse", "warpfs-plugins"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/totalwindupflightsystems/warpfs"
