[package]
name = "warpfs_backends"
version = "0.1.0"
edition = "2021"
description = "WarpFS backend storage — Git (git2), S3 (aws-sdk), remote repos, local disk"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
aws-sdk-s3 = "1"
aws-config = "1"
tokio = { version = "1", features = ["full"] }
