[package]
name = "warpfs_core"
version = "0.1.0"
edition = "2021"
description = "WarpFS core types — manifest parsing and configuration"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
