[package]
name = "warpfs_graph"
version = "0.1.0"
edition = "2021"
description = "WarpFS graph engine — tree-sitter AST parsing and DuckDB graph queries"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
duckdb = { version = "1.1", features = ["bundled"] }
warpfs_metadata = { path = "../warpfs-metadata" }

[dev-dependencies]
tempfile = "3"
