[package]
name = "warpfs_graph"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/totalwindupflightsystems/warpfs"
description = "WarpFS graph engine — tree-sitter AST parsing and DuckDB graph queries"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
duckdb = { version = "1.1", features = ["bundled"] }
warpfs_metadata = { path = "../warpfs-metadata" }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_bench"
harness = false
