[package]
name = "warpfs_mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WarpFS MCP server — stdio-based Model Context Protocol server"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
warpfs_metadata = { path = "../warpfs-metadata" }
warpfs_graph = { path = "../warpfs-graph" }
warpfs_core = { path = "../warpfs-core" }

[dev-dependencies]
tempfile = "3"
