[package]
name = "warpfs_permissions"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/totalwindupflightsystems/warpfs"
description = "WarpFS permission enforcement — glob-based path matching with mode bits"

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
