[package]
name = "warpfs_triggers"
version = "0.1.0"
edition = "2021"
description = "WarpFS trigger engine — inotify file watching, debouncing, async execution"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
inotify = "0.10"
tokio = { version = "1", features = ["full"] }
